# lmParse

./: .gitignore  README.md  lmParse.py  pyproject.toml
.github/workflows/: python-tests.yml
lmParse/: __init__.py
tests/: log_test.py
